can delete all cards on screen and update card count

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     
     }
 
-    .winner{
-        font-size: 4em;
+    .card-count{
+        font-size: 2em;
         color: red;
-        display: none;
+       display: block;
 
     }
 
@@ -85,11 +85,12 @@
     <div class="players-card">
         <div class="players-card__player-1">
             <h1>Player One</h1>
-            <h1 class = "winner">Player One has won</h1>
+            <h1 class = "card-count card-count__player-1">26 cards in deck</h1>
         </div>
         <br/>
         <div class="players-card__player-2">
             <h1>Player Two</h1>
+            <h1 class = "card-count card-count__player-2">26 cards in deck</h1>
         </div>
     </div>
 
