forgo draw api and pile and just made pile card added to bottom - problem is that without drawing, it is hard to end game

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     }
 
-    .user-button{
+    .war__button{
         border-radius: 10px;
         border:none;
         background-color: #001f3f;
@@ -80,6 +80,12 @@
 
     }
 
+    .winner__header{
+        font-size: 6em;
+        color: red;
+       display: none;
+    }
+
 </style>
 <body>
     <div class="players-card">
@@ -95,7 +101,11 @@
     </div>
 
     <div class="war">
-        <button class= "user-button war__button">Time to go to War</button>
+        <button class= "war__button">Time to go to War</button>
+    </div>
+
+    <div class="winner">
+        <h1 class = "winner__header">Player Two won!</h1>
     </div>
 
     <!-- <div class="showdown">
